# ptyrad

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LoopSubmit.sh  Notes_of_multiGPU_for_ptychography.md  Notes_of_multiGPU_with_MIGs.md  README.md  Thumbs.db  WISHLIST.md  __init__.py  data_io.py  db.sqlite3  environment_ptyrad.yml  forward.py  forward_model.py  hypertune_database.sqlite3  image_analysis.ipynb  initialization.py  models.py  optimization.py  preprocess.py  pyproject.toml  run_ptyrad.ipynb  run_ptyrad_CNS.ipynb  run_ptyrad_altas.py  run_ptyrad_local.py  run_ptyrad_multiobj.ipynb  run_ptyrad_optuna.ipynb  run_ptyrad_optuna_altas.py  slurm_run_ptyrad.sub  slurm_run_ptyrad_optuna.sub  utils.py  visualization.py
.github/workflows/: publish_pypi.yml
archive/: abtem_frozen_phonon_potential.ipynb  image_analysis.ipynb  run_ptyrad_CNS.ipynb  run_ptyrad_CNS_500configs.ipynb  run_ptyrad_CNS_moms.ipynb  run_ptyrad_batch_forward.ipynb  run_ptyrad_minimal_change.ipynb  run_ptyrad_pure_complex.ipynb
data/: demo_data_instruction.txt
demo/data/: data_url.txt
demo/params/: PSO_reconstruct.yml  tBL_WSe2_hypertune.yml  tBL_WSe2_reconstruct.yml  tBL_WSe2_reconstruct_minimal.yml
demo/scripts/: LoopSubmit.sh  run_ptyrad_detailed_walkthrough.ipynb  run_ptyrad_quick_example.ipynb  slurm_run_ptyrad.sub
docs/: Makefile  WISHLIST.md  changelog.md  cli.md  conf.py  index.md  installation.md  overview.md  params.md  params_description.md  python.md  quickstart.md  requirements.txt  spec-file_ptyrad_optuna_windows.txt
docs/20240924_multiGPU/: Notes_of_multiGPU_for_ptychography.md  log_job_42193_ptyrad_benchmark_acc2_b64.txt  log_job_42209_ptyrad_benchmark_normal_b32.txt  log_job_42211_ptyrad_benchmark_normal_b128.txt  log_job_42212_ptyrad_benchmark_normal_b256.txt
docs/20241005_effect_of_cpu_cores/: log_job_42493_ptyrad_tBL_WSe2_4cpu.txt  log_job_42494_ptyrad_tBL_WSe2_8cpu.txt  log_job_42495_ptyrad_tBL_WSe2_16cpu.txt  log_job_42497_ptyrad_tBL_WSe2_64cpu.txt
docs/20241202_package_iter_times/: package_iter_times.xlsx
docs/20241215_multiGPU/: iteration_time_vs_batch_size.xlsx  log_job_45409_ptyrad_multigpu_b512_g4.txt  log_job_45410_ptyrad_multigpu_b1024_g4.txt  log_job_45411_ptyrad_multigpu_b2048_g4.txt  log_job_45412_ptyrad_multigpu_b256_g4.txt  log_job_45415_ptyrad_multigpu_b32_g4.txt  log_job_45418_ptyrad_multigpu_b512_g2.txt  log_job_45419_ptyrad_multigpu_b256_g2.txt  log_job_45422_ptyrad_multigpu_b32_g2.txt  log_job_45423_ptyrad_multigpu_b32_g1.txt  log_job_45424_ptyrad_multigpu_b64_g1.txt  log_job_45425_ptyrad_multigpu_b128_g1.txt  log_job_45428_ptyrad_multigpu_b1024_g1.txt  log_job_45429_ptyrad_multigpu_b2048_g1.txt
docs/20241219_GPU_comparison/: GPU_comparison.xlsx  log_job_45407_ptyrad_speed_A100_20gb.txt
docs/_static/: custom.css  custom.js
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/api/: cli.rst  constraints.rst  forward.rst  index.md  initialization.rst  load.rst  losses.rst  models.rst  reconstruction.rst  save.rst  visualization.rst
docs/examples/: index.md
docs/launch/: cli.md  hypertune.md  index.md  multiGPU.md  python.md  slurm.md
docs/params/: constraint_p.md  hypertune_p.md  index.md  init_p.md  loss_p.md  model_p.md  recon_p.md
envs/: create_environments_py4dstem.md  environment_ptyrad_acc.yml  environment_ptyrad_cuda118.yml  environment_ptyrad_cuda121.yml  environment_ptyrad_no_cuda.yml  requirements_py4dstem.txt  spec-file_ptyrad_acc_linux.txt  spec-file_ptyrad_linux.txt
notes/: Git_workflow.md
notes/20240924_multiGPU/: Notes_of_multiGPU_for_ptychography.md  iteration_time_vs_batch_size.xlsx  log_job_42192_ptyrad_benchmark_acc2_b32.txt  log_job_42200_ptyrad_benchmark_acc2_b128.txt  log_job_42201_ptyrad_benchmark_acc2_b256.txt  log_job_42202_ptyrad_benchmark_acc2_b512.txt  log_job_42203_ptyrad_benchmark_acc2_b1024.txt  log_job_42204_ptyrad_benchmark_acc2_b2048.txt  log_job_42205_ptyrad_benchmark_acc2_b4096.txt  log_job_42206_ptyrad_benchmark_acc2_b8192.txt  log_job_42210_ptyrad_benchmark_normal_b64.txt  log_job_42213_ptyrad_benchmark_normal_b512.txt  log_job_42214_ptyrad_benchmark_normal_b1024.txt  log_job_42215_ptyrad_benchmark_normal_b2048.txt  log_job_42216_ptyrad_benchmark_normal_b4096.txt
notes/20241005_effect_of_cpu_cores/: log_job_42496_ptyrad_tBL_WSe2_32cpu.txt
notes/20241215_multiGPU/: log_job_45413_ptyrad_multigpu_b128_g4.txt  log_job_45414_ptyrad_multigpu_b64_g4.txt  log_job_45416_ptyrad_multigpu_b2048_g2.txt  log_job_45417_ptyrad_multigpu_b1024_g2.txt  log_job_45420_ptyrad_multigpu_b128_g2.txt  log_job_45421_ptyrad_multigpu_b64_g2.txt  log_job_45426_ptyrad_multigpu_b256_g1.txt  log_job_45427_ptyrad_multigpu_b512_g1.txt
notes/20241219_GPU_comparison/: GPU_comparison.xlsx  Notes_of_choosing_GPU.md  log_job_45404_ptyrad_speed_A100_full.txt  log_job_45405_ptyrad_speed_A100_10gb.txt
params/: demo_PSO_reconstruct.yml  demo_tBL_WSe2_hypertune.yml  demo_tBL_WSe2_reconstruct.yml  demo_tBL_WSe2_reconstruct_test.yml  init_params_flat.yml  init_params_flat_physics.yml  init_params_flat_workflow.yml  init_params_nest.yml
params/archive/: ZSM5_4.yml  (+16 more)
ptyrad/: __init__.py  constraints.py  data_io.py  forward.py  initialization.py  load.py  losses.py  models.py  optimization.py  reconstruction.py  save.py  utils.py  visualization.py
scripts/: LoopSubmit.sh  get_scan_affine.ipynb  omode_image_analysis.ipynb  params_Si_128.py  run_PtyShv.m  run_ptyrad.py  run_ptyrad_detailed_walkthrough.ipynb  run_ptyrad_quick_example.ipynb  run_ptyshv.m  run_py4dstem.py  run_py4dstem_detailed_walkthrough.ipynb  slurm_run_PtyShv.sub  slurm_run_abtem.sub  slurm_run_ptyrad.sub  slurm_run_ptyrad_acc.sub  slurm_run_ptyshv.sub  slurm_run_py4dstem.sub
(+163 files in other folders)
